start updating documentation